Added preview maybe?

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="PREVIEW_IMAGE.png" />
     <meta
       name="description"
       content="Hi! My name is Kevin Yu, and I'm a Computer Engineering student studying at Queens University. Here is my work portfolio where you find my lastest work experience and projects. "
