feat(view-port-width): add meta tag to match screen size to view port width

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="theme-color" content="#000000" />
     <meta property="og:image" content="https://kevinyu.ca/preview-image.jpeg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Hi! My name is Kevin Yu, and I'm a Computer Engineering student studying at Queens University. Here is my work portfolio where you find my lastest work experience and projects. "
@@ -16,7 +17,6 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <meta charset="UTF-8" />
     <title>Kevin Yu</title>
-
   </head>
   <body>
     <div id="root"></div>
